examples/test/testpolicy11522.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11522
  namespace: namespace62
spec:
  podSelector:
    matchLabels:
      key29: value46
      key49: value44
      key38: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value0
          key37: value21
          key11: value38
      podSelector:
        matchLabels:
          key29: value40
          key38: value24
          key13: value13
